--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -8,8 +8,8 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_WEBAPP_NAME: 'taskflow-app'  # Update with your Azure Web App name
-  PYTHON_VERSION: '3.11'
+  AZURE_WEBAPP_NAME: 'TaskFlowRINTE'  # Update with your Azure Web App name
+  PYTHON_VERSION: '3.14'
 
 jobs:
   build-and-deploy:
