--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -8,23 +8,23 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_WEBAPP_NAME: 'TaskFlowRINTE'  # Update with your Azure Web App name
-  PYTHON_VERSION: '3.14'
+  AZURE_WEBAPP_NAME: 'TaskFlowRINTE'
+  PYTHON_VERSION: '3.11'
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     
     steps:
-    - name: 'Checkout GitHub Action'
+    - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Set up Python version
+    - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: ${{ env.PYTHON_VERSION }}
 
-    - name: Install Python dependencies
+    - name: Install backend dependencies
       run: |
         cd backend
         pip install -r requirements.txt
@@ -35,10 +35,14 @@ jobs:
         npm ci
         npm run build
 
-    - name: 'Deploy to Azure Web App'
+    - name: Copy frontend build to backend
+      run: |
+        mkdir -p backend/static
+        cp -r frontend/dist/* backend/static/
+
+    - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
         package: ./backend
-
