--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -10,11 +10,12 @@ on:
 env:
   AZURE_WEBAPP_NAME: 'TaskFlowRINTE'
   PYTHON_VERSION: '3.11'
+  AZURE_RESOURCE_GROUP: 'RINTE'
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -40,9 +41,13 @@ jobs:
         mkdir -p backend/static
         cp -r frontend/dist/* backend/static/
 
+    - name: Azure Login
+      uses: azure/login@v2
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
         package: ./backend
