--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -9,6 +9,7 @@ on:
 
 env:
   AZURE_WEBAPP_NAME: 'TaskFlowRINTE'
+  RESOURCE_GROUP: 'RINTE'
   PYTHON_VERSION: '3.14'
 
 jobs:
@@ -24,34 +25,38 @@ jobs:
       with:
         python-version: ${{ env.PYTHON_VERSION }}
 
-    # Install backend dependencies (no need to cd inside GitHub actions runner)
     - name: Install backend dependencies
       working-directory: ./backend
       run: |
         pip install -r requirements.txt
 
-    # Build frontend
     - name: Build frontend
       working-directory: ./frontend
       run: |
         npm ci
         npm run build
 
-    # Copy frontend build output into backend/static
     - name: Copy frontend build to backend
       run: |
         mkdir -p backend/static
         cp -r frontend/dist/* backend/static/
 
-    # Zip the entire backend folder (important)
     - name: Prepare deployment package
       run: |
         zip -r backend.zip backend
 
-    # Deploy using the publish profile
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
         package: ./backend.zip
+
+    - name: Set startup command
+      uses: azure/cli@v2
+      with:
+        inlineScript: |
+          az webapp config set \
+            --name ${{ env.AZURE_WEBAPP_NAME }} \
+            --resource-group ${{ env.RESOURCE_GROUP }} \
+            --startup-file "cd backend && gunicorn --bind=0.0.0.0:8000 --worker-class eventlet -w 1 app:app"
