--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -26,7 +26,7 @@ jobs:
         python-version: ${{ env.PYTHON_VERSION }}
 
     - name: Install backend dependencies
-      working-directory: ./backend
+      working-directory: ./
       run: |
         pip install -r requirements.txt
 
