--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -9,7 +9,6 @@ on:
 
 env:
   AZURE_WEBAPP_NAME: 'TaskFlowRINTE'
-  RESOURCE_GROUP: 'RINTE'
   PYTHON_VERSION: '3.14'
 
 jobs:
@@ -26,13 +25,12 @@ jobs:
         python-version: ${{ env.PYTHON_VERSION }}
 
     - name: Install backend dependencies
-      working-directory: ./
       run: |
         pip install -r requirements.txt
 
     - name: Build frontend
-      working-directory: ./frontend
       run: |
+        cd frontend
         npm ci
         npm run build
 
@@ -41,22 +39,9 @@ jobs:
         mkdir -p backend/static
         cp -r frontend/dist/* backend/static/
 
-    - name: Prepare deployment package
-      run: |
-        zip -r backend.zip backend
-
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: ./backend.zip
-
-    - name: Set startup command
-      uses: azure/cli@v2
-      with:
-        inlineScript: |
-          az webapp config set \
-            --name ${{ env.AZURE_WEBAPP_NAME }} \
-            --resource-group ${{ env.RESOURCE_GROUP }} \
-            --startup-file "cd backend && gunicorn --bind=0.0.0.0:8000 --worker-class eventlet -w 1 app:app"
+        package: ./backend
