--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -26,7 +26,9 @@ jobs:
 
     - name: Install backend dependencies
       run: |
+        pip install --upgrade pip
         pip install -r requirements.txt
+        pip install gunicorn eventlet flask-socketio
 
     - name: Build frontend
       run: |
