--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -26,9 +26,12 @@ jobs:
 
     - name: Install backend dependencies
       run: |
-        pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install gunicorn eventlet flask-socketio
+        cd backend
+        python -m venv antenv
+        source antenv/bin/activate
+        pip install --upgrade pip setuptools wheel
+        pip install --no-cache-dir -r requirements.txt
+        pip install --no-cache-dir gunicorn  flask-socketio eventlet>=0.33.0
 
     - name: Build frontend
       run: |
