--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -34,7 +34,7 @@ jobs:
       run: |
         cd frontend
         npm ci
-        npm audit fix --force
+        npm audit fix
         npm run build
 
     - name: Copy frontend build to backend
